<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_title">Welcome to our Shoe Store</string>
    <string name="next">Next</string>
    <string name="second_instruction">2. Tap + icon the add a new shoe item to your inventory</string>
    <string name="instructions_header">Instructions</string>
    <string name="third_instruction">3. Click save button to save the shoe to your inventory</string>
    <string name="login_header">Welcome to Login Screen</string>
    <string name="logout_menu">Logout</string>
    <string name="first_instruction">1. Click next to continue</string>
    <string name="shoe_detail_header">Add Shoe Detail</string>
    <string name="shoe_name_hint">Enter Shoe Name</string>
    <string name="shoe_company_hint">Enter Company Name</string>
    <string name="shoe_size_hint">Enter Shoe Size</string>
    <string name="shoe_description_hint">Enter Shoe Description</string>
    <string name="shoe_size">Range ₹%1$.0f - ₹%2$.0f</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>