<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <!--ConstraintLayout can create large and complex layouts with no nested view groups-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_header"
            style="@style/header_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/instructions_header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_instruction"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:padding="@dimen/small_padding"
            android:text="@string/first_instruction"
            app:layout_constraintTop_toBottomOf="@id/instructions_header" />
        <TextView
            android:id="@+id/second_instruction"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:padding="@dimen/small_padding"
            android:text="@string/second_instruction"
            app:layout_constraintTop_toBottomOf="@id/first_instruction" />

        <TextView
            android:id="@+id/third_instruction"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:padding="@dimen/small_padding"
            android:text="@string/third_instruction"
            app:layout_constraintTop_toBottomOf="@id/second_instruction" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/button_style"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>