<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.mazen.shoestore.shoe_list.ShoeViewModel" />
    </data>
<!--LinearLayout put all the views in a single direction horizontal or vertical-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".details.DetailsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_header"
            style="@style/header_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextInputLayoutOutLinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:padding="@dimen/small_padding"
            android:hint="@string/shoe_name_hint"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:text="@={viewModel.newShoeName}"
            android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextInputLayoutOutLinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/large_margin"
            android:padding="@dimen/small_padding"
            android:hint="@string/shoe_company_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_company"
            android:layout_width="match_parent"
            android:inputType="text"
            android:text="@={viewModel.newShoeCompany}"
            android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextInputLayoutOutLinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:padding="@dimen/small_padding"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            android:layout_marginTop="@dimen/large_margin"
            android:hint="@string/shoe_size_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_size"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:text="@={viewModel.newShoeSize}"
            android:maxLength="4"
            android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/large_margin"
            android:hint="@string/shoe_description_hint"
            style="@style/MyTextInputLayoutOutLinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_description"
            android:layout_width="match_parent"
            android:inputType="text"
            android:text="@={viewModel.newShoeDescription}"
            android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/button_style"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/button_style"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>